--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: "Roboto", sans-serif;
 }
 
 /* Styles for .main */
@@ -32,10 +33,10 @@
   /* Styles for .trainName */
   .trainName {
     position: absolute;
-    bottom: 0;
+    top: 100%;
     left: 50%;
     width: 80%;
-    transform: translate(-50%, 20px);
+    transform: translate(-50%, -50%);
     background-color: white;
     border-radius: 10px;
     overflow: hidden;
@@ -44,7 +45,7 @@
   /* Styles for h1 inside .trainName */
   .trainName>h1 {
     padding: 10px;
-    font-size: 1.3em;
+    font-size: 1.2em;
     background-color: #3f5390;
     color: white;
   }
@@ -52,9 +53,9 @@
   /* Styles for .timeBox */
   .timeBox {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    margin: 10px;
+    margin: 10px 20px;
 }
   
   
@@ -65,7 +66,8 @@
   
   /* Styles for h1 inside .stationBox */
   .stationBox>h1 {
-    font-size: 1.2em;
+    font-size: 1em;
+    letter-spacing: 0.3px;
   }
 
   .stationBox>h1>span{
@@ -84,6 +86,7 @@
     text-align: center;
     margin: 3px 0;
     letter-spacing: 1px;
+    font-size: 0.9em;
   }
   
   /* Styles for .time */
@@ -91,19 +94,32 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    font-size: 0.9em;
   }
 
   .time>span{
     display: inline-block;
     width: 15px;
-    height: 1.4px;
-    background-color: black;
+    height: 1.34px;
+    background-color: #909090;
     margin: 0 6px;
   }
   
   /* Styles for .coach */
   .coach {
-    /* Add your styles here */
+    text-align: center;
+    background-color: #e7e7e7;
+    width: fit-content;
+    margin: auto;
+    padding: 10px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    font-size: 1.05em;
+  }
+
+  .coach>span{
+    border-left: 1.5px solid black;
+    padding-left: 4px;
   }
   
   /* Styles for .formBox */
