--- a/assets/style/ticket.css
+++ b/assets/style/ticket.css
@@ -15,11 +15,27 @@
     justify-content: center;
     align-items: center;
     padding: 8% 10%;
+    background-image: url('../images/tejas.jpeg');
+    background-position: center;
+    background-size: cover;
 
 }
 
+.main::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    backdrop-filter: blur(2px);
+    background-color: rgba(137, 137, 137, 0.644);
+  }
+  
+
 
 .ticketBox {
+    position: relative;
     width: 100%;
     height: 100%;
     display: flex;
